--- a/ansible/machines/vault-server/configure.yaml
+++ b/ansible/machines/vault-server/configure.yaml
@@ -1,5 +1,5 @@
 - hosts: vault-server.willtaylor.info
   remote_user: root
   roles:
-  - role: ../../../common/roles/update-system
+  - role: ../../common/roles/update-system
   - role: ./roles/hashicorp-vault
