--- a/ansible/machines/vector-server/roles/configure-vector/files/vector.yaml
+++ b/ansible/machines/vector-server/roles/configure-vector/files/vector.yaml
@@ -24,6 +24,22 @@ sources:
     type: internal_metrics
   internal_logs:
     type: internal_logs
+  talos_kernel_logs:
+    address: 0.0.0.0:6050
+    type: socket
+    mode: udp
+    max_length: 102400
+    decoding:
+      codec: json
+    host_key: __host
+  talos_service_logs:
+    address: 0.0.0.0:6051
+    type: socket
+    mode: udp
+    max_length: 102400
+    decoding:
+      codec: json
+    host_key: __host
 transforms:
   internal_logs_enriched:
     type: remap
@@ -32,13 +48,13 @@ transforms:
       .service = "vector"
       .host = get_hostname!()
 sinks:
-  generic_metrics:
+  generic_metrics: &prom-metrics-sink
     type: prometheus_remote_write
     inputs: [internal_metrics]
     endpoint: http://metrics-server.willtaylor.info:8428/api/v1/write
     healthcheck:
       enabled: false
-  machine_service_logs:
+  machine_service_logs: &elastic-logs-sink
     type: elasticsearch
     inputs: [internal_logs_enriched]
     endpoints: ['http://logs-server.willtaylor.info:9428/insert/elasticsearch']
@@ -50,3 +66,17 @@ sinks:
       _msg_field: message
       _time_field: timestamp
       _stream_fields: host,service
+  talos_kernel_logs_sink:
+    <<: *elastic-logs-sink
+    inputs: [talos_kernel_logs]
+    query:
+      _msg_field: msg
+      _time_field: talos-time
+      _stream_fields: talos-service
+  talos_service_logs_sink:
+    <<: *elastic-logs-sink
+    inputs: [talos_service_logs]
+    query:
+      _msg_field: msg
+      _time_field: talos-time
+      _stream_fields: facility
