--- a/ansible/machines/seaweed-server/configure.yaml
+++ b/ansible/machines/seaweed-server/configure.yaml
@@ -4,3 +4,42 @@
   - role: ../../common/roles/update-system
   - role: ./roles/install-seaweed
   - role: ./roles/configure-seaweed
+  - role: ../../common/roles/vector-agent
+    vars:
+      vector_config:
+        data_dir: /opt/vector/data
+        schema:
+          log_namespace: true
+        sources:
+          vector_logs:
+            type: internal_logs
+          journald:
+            type: journald
+            include_units:
+            - seaweedfiler.service
+            - seaweedmaster.service
+            - seaweeds3gateway.service
+            - seaweedvolume.service
+        transforms:
+          mapped_journal_logs:
+            type: remap
+            inputs: [journald]
+            source: |-
+              .message = .
+              .timestamp = %journald.timestamp
+              .lxc_host = %journald.host
+              .host = "tardis"
+              .service = %journald._SYSTEMD_UNIT
+        sinks:
+          console:
+            type: console
+            inputs: ["vector_logs"]
+            encoding:
+              codec: text
+          vector_server:
+            type: vector
+            inputs: ["mapped_journal_logs"]
+            address: http://vector-server.willtaylor.info:6001
+            version: "2"
+            tls:
+              enabled: false
