--- a/ansible/machines/vault-server/roles/hashicorp-vault/tasks/distribution/ubuntu.yaml
+++ b/ansible/machines/vault-server/roles/hashicorp-vault/tasks/distribution/ubuntu.yaml
@@ -5,15 +5,16 @@
     - debian-keyring
     - debian-archive-keyring
     - apt-transport-https
-- name: Add hashicorp gpg key
-  ansible.builtin.get_url:
-    url: https://apt.releases.hashicorp.com/gpg
-    dest: /etc/apt/keyrings/hashicorp-archive-keyring.asc
-    mode: '0644'
-- name: Add hashicorp repo
-  ansible.builtin.apt_repository:
-    filename: hashicorp-deb-repo
-    repo: 'deb [signed-by=/etc/apt/keyrings/hashicorp-archive-keyring.asc] https://apt.releases.hashicorp.com {{ ansible_distribution_release }} main'
+    - python3-debian
+- name: Add repo using key from URL
+  deb822_repository:
+    name: hashicorp
+    types: deb
+    uris: https://apt.releases.hashicorp.com
+    suites: '{{ ansible_distribution_release }}'
+    components: main
+    architectures: amd64
+    signed_by: https://apt.releases.hashicorp.com/gpg
 - name: Install vault
   apt:
     name: vault
