--- a/ansible/machines/logs-server/configure.yaml
+++ b/ansible/machines/logs-server/configure.yaml
@@ -6,3 +6,41 @@
     victorialogs_data_dir: "/mnt/victoria-logs/data"
     victorialogs_retention_period: "1"
     victorialogs_retention_max_disk_space_usage_bytes: "100GiB"
+  - role: ../../common/roles/vector-agent
+    vars:
+      vector_config:
+        data_dir: /opt/vector/data
+        api:
+          enabled: true
+        schema:
+          log_namespace: true
+        sources:
+          vector_logs:
+            type: internal_logs
+          journald:
+            type: journald
+            include_units:
+            - victorialogs.service
+        transforms:
+          mapped_journal_logs:
+            type: remap
+            inputs: [journald]
+            source: |-
+              .message = .
+              .timestamp = %journald.timestamp
+              .lxc_host = %journald.host
+              .host = "tardis"
+              .service = %journald.metadata._SYSTEMD_UNIT
+        sinks:
+          console:
+            type: console
+            inputs: ["vector_logs"]
+            encoding:
+              codec: text
+          vector_server:
+            type: vector
+            inputs: ["mapped_journal_logs"]
+            address: http://vector-server.willtaylor.info:6001
+            version: "2"
+            tls:
+              enabled: false
