add base red-squadron machine

--- a/ansible/machines/tardis/configure.yaml
+++ b/ansible/machines/tardis/configure.yaml
@@ -1,7 +1,7 @@
 - hosts: tardis
   remote_user: wtaylor
   roles:
-  - role: ./roles/proxmox-configure-nonprod-sources
+  - role: ../../common/roles/proxmox-configure-nonprod-sources
   - role: ../../common/roles/update-system
   - role: ./roles/enable-vfio
   - role: ./roles/reserve-gpu
