--- a/ansible/common/roles/proxmox-configure-nonprod-sources/tasks/main.yaml
+++ b/ansible/common/roles/proxmox-configure-nonprod-sources/tasks/main.yaml
@@ -3,6 +3,11 @@
   file:
     path: /etc/apt/sources.list.d/pve-enterprise.list
     state: absent
+- name: Ensure pve-enterprise ceph repository does not exist
+  become: true
+  file:
+    path: /etc/apt/sources.list.d/ceph.list
+    state: absent
 - name: Ensure pve-no-subscription repository is configured
   become: true
   copy:
@@ -14,6 +19,15 @@
       # PVE pve-no-subscription repository provided by proxmox.com,
       # NOT recommended for production use
       deb http://download.proxmox.com/debian/pve bookworm pve-no-subscription
+- name: Ensure ceph-no-subscription repository is configured
+  become: true
+  copy:
+    dest: /etc/apt/sources.list.d/ceph-no-subscription.list
+    owner: root
+    group: root
+    mode: '0644'
+    content: |
+      deb http://download.proxmox.com/debian/ceph-squid bookworm no-subscription
 - name: Disable subscription nag messages
   become: true
   copy:
