--- a/ansible/common/roles/proxmox-configure-nonprod-sources/tasks/main.yaml
+++ b/ansible/common/roles/proxmox-configure-nonprod-sources/tasks/main.yaml
@@ -1,33 +1,24 @@
 - name: Ensure pve-enterprise repository does not exist
   become: true
+  loop:
+  - pve-enterprise.list
+  - ceph.list
   file:
-    path: /etc/apt/sources.list.d/pve-enterprise.list
+    path: "/etc/apt/sources.list.d/{{ item }}"
     state: absent
-- name: Ensure pve-enterprise ceph repository does not exist
+- name: Ensure no-subscription repositories are configured
   become: true
-  file:
-    path: /etc/apt/sources.list.d/ceph.list
-    state: absent
-- name: Ensure pve-no-subscription repository is configured
-  become: true
+  loop:
+  - name: pve-no-subscription.list
+    content: deb http://download.proxmox.com/debian/pve bookworm pve-no-subscription
+  - name: ceph-no-subscription.list
+    content: deb http://download.proxmox.com/debian/ceph-squid bookworm no-subscription
   copy:
-    dest: /etc/apt/sources.list.d/pve-no-subscription.list
+    dest: /etc/apt/sources.list.d/{{ item.name }}
     owner: root
     group: root
     mode: '0644'
-    content: |
-      # PVE pve-no-subscription repository provided by proxmox.com,
-      # NOT recommended for production use
-      deb http://download.proxmox.com/debian/pve bookworm pve-no-subscription
-- name: Ensure ceph-no-subscription repository is configured
-  become: true
-  copy:
-    dest: /etc/apt/sources.list.d/ceph-no-subscription.list
-    owner: root
-    group: root
-    mode: '0644'
-    content: |
-      deb http://download.proxmox.com/debian/ceph-squid bookworm no-subscription
+    content: "{{ item.content }}\n"
 - name: Disable subscription nag messages
   become: true
   copy:
