--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "ansible-lint>=25.4.0",
     "ansible>=11.1.0",
     "hvac>=2.3.0",
 ]
+[tool.uv]
+environments = ["platform_system != 'Windows'"]
