--- a/mise.toml
+++ b/mise.toml
@@ -1,6 +1,8 @@
 [tools]
 python = { version = "3.13.1", virtualenv = ".venv" }
+terraform = "1.11.4"
 uv = "0.5.11"
+vault = "1.18.3"
 
 [settings]
 experimental = true
