--- a/terraform/projects/red-squadron/files/cilium-install-job.yaml
+++ b/terraform/projects/red-squadron/files/cilium-install-job.yaml
@@ -71,14 +71,15 @@ spec:
         command:
         - cilium
         - install
+        - --version=v1.17.3
         - --set
         - ipam.mode=kubernetes
         - --set
         - kubeProxyReplacement=true
         - --set
-        - securityContext.capabilities.ciliumAgent={CHOWN,KILL,NET_ADMIN,NET_RAW,IPC_LOCK,SYS_ADMIN,SYS_RESOURCE,DAC_OVERRIDE,FOWNER,SETGID,SETUID}
+        - securityContext.capabilities.ciliumAgent='{CHOWN,KILL,NET_ADMIN,NET_RAW,IPC_LOCK,SYS_ADMIN,SYS_RESOURCE,DAC_OVERRIDE,FOWNER,SETGID,SETUID}'
         - --set
-        - securityContext.capabilities.cleanCiliumState={NET_ADMIN,SYS_ADMIN,SYS_RESOURCE}
+        - securityContext.capabilities.cleanCiliumState='{NET_ADMIN,SYS_ADMIN,SYS_RESOURCE}'
         - --set
         - cgroup.autoMount.enabled=false
         - --set
@@ -88,26 +89,32 @@ spec:
         - --set
         - k8sServicePort=7445
         - --set
-        - bgpControlPlane.enabled=true
-        - --set
-        - ingressController.enabled=true
-        - --set
-        - ingressController.default=false
-        - --set
-        - ingressController.loadbalancerMode=shared
-        - --set
-        - ingressController.defaultSecretNamespace=kube-system
-        - --set
-        - ingressController.defaultSecretName=default-wildcard-tls-secret
-        - --set
-        - ingressController.service.loadBalancerIP=172.28.3.128
-        - --set
-        - gatewayAPI.enabled=true
-        - --set
-        - k8sClientRateLimit.qps=600
-        - --set
-        - k8sClientRateLimit.burst=900
-        - --set
         - operator.replicas=1
         - --set
         - hubble.relay.enabled=true
+        - --set
+        - hubble.ui.enabled=true
+        - --set
+        - routingMode=native
+        - --set
+        - autoDirectNodeRoutes=true
+        - --set
+        - bpf.masquerade=true
+        - --set
+        - ipv4NativeRoutingCIDR=10.244.0.0/16
+        - --set
+        - k8s.requireIpv4PodCIDR=true
+        - --set
+        - installNoConntrackIptablesRules=true
+        - --set
+        - localRedirectPolicy=true
+        - --set
+        - bgpControlPlane.enabled=true
+        - --set
+        - l7proxy=false
+        - --set
+        - envoy.enabled=false
+        - --set
+        - k8sClientRateLimit.qps=1200
+        - --set
+        - k8sClientRateLimit.burst=1800
