--- a/terraform/modules/argocd-bootstrap/files/argocd-app-root-app-of-apps.yaml
+++ b/terraform/modules/argocd-bootstrap/files/argocd-app-root-app-of-apps.yaml
@@ -2,6 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: root-app-of-apps
+  namespace: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
