--- a/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/kube-system/cilium/kustomization.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/kube-system/cilium/kustomization.yaml
@@ -6,7 +6,7 @@ helmCharts:
   repo: https://helm.cilium.io/
   releaseName: cilium
   namespace: kube-system
-  version: "1.17.3"
+  version: "1.17.4"
   valuesInline:
     ipam:
       mode: kubernetes
@@ -19,42 +19,27 @@ helmCharts:
       autoMount:
         enabled: false
       hostRoot: /sys/fs/cgroup
-    bgpControlPlane:
-      enabled: true
-    ingressController:
-      enabled: true
-      default: false
-      loadbalancerMode: shared
-      defaultSecretNamespace: kube-system
-      defaultSecretName: default-wildcard-tls-secret
-      service:
-        loadBalancerIP: 172.28.3.128
-    gatewayAPI:
-      enabled: false
-    l2announcements:
-      enabled: true
-      leaseDuration: 3s
-      leaseRenewDeadline: 2s
-      leaseRetryPeriod: 200ms
-    k8sClientRateLimit:
-      qps: 600
-      burst: 900
-    operator:
-      replicas: 1
     hubble:
       relay:
         enabled: true
       ui:
         enabled: true
-    k8sServiceHost: "172.28.3.2"
-    k8sServicePort: 6443
-patches:
-- target:
-    group: ""
-    kind: Secret
-  patch: |
-    $patch: delete
-    apiVersion: v1
-    kind: Secret
-    metadata:
-      name: UNUSED
+    operator:
+      replicas: 1
+    routingMode: native
+    autoDirectNodeRoutes: true
+    bpf:
+      masquerade: true
+    ipv4NativeRoutingCIDR: 10.244.0.0/16
+    k8s:
+      requireIpv4PodCIDR: true
+    installNoConntrackIptablesRules: true
+    localRedirectPolicy: true
+    bgpControlPlane:
+      enabled: true
+    l7proxy: false
+    envoy:
+      enabled: false
+    k8sClientRateLimit:
+      qps: 120
+      burst: 180
