--- a/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/argocd/argocd/kustomization.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/argocd/argocd/kustomization.yaml
@@ -2,6 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: argocd
 resources:
+- ./resources/namespace.yaml
 - github.com/argoproj/argo-cd/manifests/cluster-install?ref=v2.14.11
 - ./resources/ingress.yaml
 - ./resources/keycloak-credentials.yaml
