--- a/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/csi-proxmox/csi-proxmox/kustomization.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/csi-proxmox/csi-proxmox/kustomization.yaml
@@ -2,4 +2,5 @@ resources:
 - https://raw.githubusercontent.com/sergelogvinov/proxmox-csi-plugin/v0.11.0/docs/deploy/proxmox-csi-plugin-release.yml
 - resources/cluster-config-secret.yaml
 - resources/storage-class.yaml
-- resources/backup-vac.yaml
+## Disabled as feature gate not enabled
+# - resources/backup-vac.yaml 
