add token review auth crb to eso sa

--- a/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/external-secrets/external-secrets/kustomization.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/external-secrets/external-secrets/kustomization.yaml
@@ -7,3 +7,4 @@ helmCharts:
 resources:
 - resources/cluster-secret-store.yaml
 - resources/service-account.yaml
+- resources/service-account-crb.yaml
