add external-secrets sa to token issuer

--- a/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/external-secrets/external-secrets/resources/service-account-crb.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/external-secrets/external-secrets/resources/service-account-crb.yaml
@@ -11,3 +11,6 @@ subjects:
 - kind: ServiceAccount
   name: eso-vault-css
   namespace: external-secrets
+- kind: ServiceAccount
+  name: external-secrets
+  namespace: external-secrets
