--- a/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/external-secrets/external-secrets/kustomization.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/external-secrets/external-secrets/kustomization.yaml
@@ -4,6 +4,7 @@ helmCharts:
   repo: https://charts.external-secrets.io
   version: "0.8.5"
   namespace: external-secrets
+  includeCRDs: true
 resources:
 - resources/cluster-secret-store.yaml
 - resources/service-account.yaml
