--- a/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/mariadb-system/mariadb-operator/kustomization.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/mariadb-system/mariadb-operator/kustomization.yaml
@@ -3,6 +3,7 @@ helmCharts:
   name: mariadb-operator
   repo: https://mariadb-operator.github.io/mariadb-operator
   version: "0.23.1"
+  includeCRDs: true
   valuesInline:
     extraArgs:
       metrics:
