velero add namespace

--- a/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/velero/velero/kustomization.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/velero/velero/kustomization.yaml
@@ -4,6 +4,7 @@ helmCharts:
   repo: https://vmware-tanzu.github.io/helm-charts
   version: "7.1.5"
   includeCRDs: true
+  namespace: velero
   valuesInline:
     configuration:
       backupStorageLocation:
