velero add sc map

--- a/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/velero/velero/kustomization.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/velero/velero/kustomization.yaml
@@ -76,3 +76,5 @@ helmCharts:
           remoteRef:
             key: kv/services/velero/backup-location-s3-credentials
             property: config
+resources:
+- resources/change-storage-class-cm.yaml
