--- a/mise.toml
+++ b/mise.toml
@@ -4,6 +4,7 @@ python = { version = "3.13.1", virtualenv = ".venv" }
 terraform = "1.11.4"
 uv = "0.5.11"
 vault = "1.18.3"
+velero = "1.14.0"
 
 [settings]
 experimental = true
