--- a/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/velero/velero/kustomization.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/velero/velero/kustomization.yaml
@@ -7,6 +7,7 @@ helmCharts:
   namespace: velero
   valuesInline:
     configuration:
+      restoreOnlyMode: true
       backupStorageLocation:
       - name: local-only
         provider: aws
