--- a/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/cert-manager/cert-manager/kustomization.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/cert-manager/cert-manager/kustomization.yaml
@@ -5,6 +5,7 @@ helmCharts:
   includeCRDs: true
   version: v1.12.3
   valuesInline:
+    installCRDs: true
     extraArgs:
     - --dns01-recursive-nameservers-only
     - --dns01-recursive-nameservers=1.1.1.1:53,8.8.8.8:53
