fix cert-manager namespace

--- a/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/cert-manager/cert-manager/kustomization.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/cert-manager/cert-manager/kustomization.yaml
@@ -4,6 +4,7 @@ helmCharts:
   repo: https://charts.jetstack.io
   includeCRDs: true
   version: v1.12.3
+  namespace: cert-manager
   valuesInline:
     installCRDs: true
     extraArgs:
