pin psql to version 15.1

--- a/kubernetes/by-cluster/red-squadron-talos/tk831/applications/by-namespace/tk831/postgres-default/cluster.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/tk831/applications/by-namespace/tk831/postgres-default/cluster.yaml
@@ -3,6 +3,7 @@ kind: Cluster
 metadata:
   name: postgres-tk831-default
 spec:
+  imageName: ghcr.io/cloudnative-pg/postgresql:15.1
   instances: 1
   primaryUpdateStrategy: unsupervised
   superuserSecret:
