--- a/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/velero/velero/resources/change-storage-class-cm.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/velero/velero/resources/change-storage-class-cm.yaml
@@ -8,4 +8,4 @@ metadata:
     velero.io/change-storage-class: RestoreItemAction
 data:
   # <old-storage-class>: <new-storage-class>
-  local-path: proxmox-zfs
+  local-path-ssd: proxmox-zfs
