update gitea db host

--- a/kubernetes/by-cluster/red-squadron-talos/tk831/applications/by-namespace/tk831/gitea/configmap.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/tk831/applications/by-namespace/tk831/gitea/configmap.yaml
@@ -31,7 +31,7 @@ data:
 
     [database]
     DB_TYPE  = postgres
-    HOST     = postgres-default-rw.svc.cluster.local:5432
+    HOST     = postgres-tk831-default-rw.svc.cluster.local:5432
     NAME     = gitea
     USER     = docker
     PASSWD   = docker
