readd cilium bgp config and gateway address

--- a/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/envoy-gateway-system/envoy-gateway/kustomization.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/envoy-gateway-system/envoy-gateway/kustomization.yaml
@@ -1,2 +1,4 @@
 resources:
 - https://github.com/envoyproxy/gateway/releases/download/v1.4.0/install.yaml
+- resources/gatewayclass.yaml
+- resources/gateway.yaml
