fix: gateway address

--- a/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/envoy-gateway-system/envoy-gateway/resources/gateway.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/envoy-gateway-system/envoy-gateway/resources/gateway.yaml
@@ -4,7 +4,9 @@ metadata:
   name: default
 spec:
   gatewayClassName: default
-  addresses: ["172.28.5.0"]
+  addresses:
+  - type: IPAddress
+    value: "172.28.5.0"
   listeners:
   - name: http
     protocol: HTTP
