protect system apps from deletion

--- a/kubernetes/by-cluster/red-squadron-talos/system/app-of-apps/applicationset.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/system/app-of-apps/applicationset.yaml
@@ -4,6 +4,8 @@ metadata:
   name: system-applications
 spec:
   goTemplate: true
+  syncPolicy:
+    preserveResourcesOnDeletion: true
   generators:
   - git:
       repoURL: https://github.com/wtaylor/device-config.git
