--- a/kubernetes/by-cluster/red-squadron-talos/tk831/applications/by-namespace/tk831/gitea/routes.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/tk831/applications/by-namespace/tk831/gitea/routes.yaml
@@ -9,7 +9,7 @@ spec:
   rules:
   - matches:
     - path:
-        type: Prefix
+        type: PathPrefix
         value: /
     backendRefs:
     - name: gitea-http
