--- a/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/cert-manager/cert-manager/kustomization.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/cert-manager/cert-manager/kustomization.yaml
@@ -3,13 +3,13 @@ helmCharts:
   name: cert-manager
   repo: https://charts.jetstack.io
   includeCRDs: true
-  version: v1.12.3
+  version: v1.17.2
   namespace: cert-manager
   valuesInline:
-    installCRDs: true
-    extraArgs:
-    - --dns01-recursive-nameservers-only
-    - --dns01-recursive-nameservers=1.1.1.1:53,8.8.8.8:53
+    crds:
+      enabled: true
+    dns01RecursiveNameserversOnly: true
+    dns01RecursiveNameservers: '1.1.1.1:53,8.8.8.8:53'
 resources:
 - resources/cloudflare-credentials.yaml
 - resources/cluster-issuer.yaml
