add https to gitea

--- a/kubernetes/by-cluster/red-squadron-talos/tk831/applications/by-namespace/tk831/gitea/routes.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/tk831/applications/by-namespace/tk831/gitea/routes.yaml
@@ -1,16 +1,29 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: gitea
+  name: gitea-http
 spec:
   parentRefs:
   - name: default
+    sectionName: http
   hostnames: [gitea.tk831.net]
   rules:
-  - matches:
-    - path:
-        type: PathPrefix
-        value: /
-    backendRefs:
+  - filters:
+    - type: RequestRedirect
+      requestRedirect:
+        scheme: https
+        statusCode: 301
+---
+apiVersion: gateway.networking.k8s.io/v1
+kind: HTTPRoute
+metadata:
+  name: gitea-https
+spec:
+  parentRefs:
+  - name: default
+    sectionName: https
+  hostnames: [gitea.tk831.net]
+  rules:
+  - backendRefs:
     - name: gitea-http
       port: 3000
