--- a/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/kube-system/default-cluster-gateway/resources/gateway.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/kube-system/default-cluster-gateway/resources/gateway.yaml
@@ -4,9 +4,11 @@ metadata:
   name: default
 spec:
   gatewayClassName: default
-  addresses:
-  - type: IPAddress
-    value: "172.28.5.0"
+  infrastructure:
+    parametersRef:
+      group: gateway.envoyproxy.io
+      kind: EnvoyProxy
+      name: default
   listeners:
   - name: http
     protocol: HTTP
