re-add single match rule

--- a/kubernetes/by-cluster/red-squadron-talos/tk831/applications/by-namespace/tk831/gitea/routes.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/tk831/applications/by-namespace/tk831/gitea/routes.yaml
@@ -24,6 +24,10 @@ spec:
     sectionName: https
   hostnames: [gitea.tk831.net]
   rules:
-  - backendRefs:
+  - matches:
+    - path:
+        type: PathPrefix
+        value: /
+    backendRefs:
     - name: gitea-http
       port: 3000
