add namespace to parentref

--- a/kubernetes/by-cluster/red-squadron-talos/tk831/applications/by-namespace/tk831/gitea/routes.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/tk831/applications/by-namespace/tk831/gitea/routes.yaml
@@ -5,6 +5,7 @@ metadata:
 spec:
   parentRefs:
   - name: default
+    namespace: kube-system
     sectionName: http
   hostnames: [gitea.tk831.net]
   rules:
@@ -21,6 +22,7 @@ metadata:
 spec:
   parentRefs:
   - name: default
+    namespace: kube-system
     sectionName: https
   hostnames: [gitea.tk831.net]
   rules:
