fix route service address

--- a/kubernetes/by-cluster/red-squadron-talos/tk831/applications/by-namespace/tk831/keycloak/routes.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/tk831/applications/by-namespace/tk831/keycloak/routes.yaml
@@ -31,5 +31,5 @@ spec:
         type: PathPrefix
         value: /
     backendRefs:
-    - name: keycloak-http
+    - name: keycloak
       port: 80
