--- a/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/kube-system/default-cluster-gateway/resources/ctp-default.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/kube-system/default-cluster-gateway/resources/ctp-default.yaml
@@ -7,4 +7,5 @@ spec:
   - group: gateway.networking.k8s.io
     kind: Gateway
     name: default
-  alpnProtocols: [http/1.0, http/1.1]
+  tls:
+    alpnProtocols: [http/1.0, http/1.1]
