temp disable prune

--- a/kubernetes/by-cluster/red-squadron-talos/tk831/app-of-apps/services-applicationset.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/tk831/app-of-apps/services-applicationset.yaml
@@ -26,6 +26,6 @@ spec:
         namespace: '{{index .path.segments 4}}'
       syncPolicy:
         automated:
-          prune: true
+          prune: false
           selfHeal: false
           allowEmpty: false
