--- a/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/kube-system/default-cluster-gateway/resources/ctp-default.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/kube-system/default-cluster-gateway/resources/ctp-default.yaml
@@ -8,6 +8,6 @@ spec:
     kind: Gateway
     name: default
   connection:
-    bufferLimit: 4Gb
+    bufferLimit: 4G
   tls:
     alpnProtocols: [http/1.0, http/1.1]
