Add BTP for large files

--- a/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/kube-system/default-cluster-gateway/kustomization.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/kube-system/default-cluster-gateway/kustomization.yaml
@@ -3,3 +3,4 @@ resources:
 - resources/envoy-proxy-config.yaml
 - resources/gateway.yaml
 - resources/ctp-default.yaml
+- resources/btp-default.yaml
