reinstate ingresses due to envoy issues

--- a/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/argocd/argocd/kustomization.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/argocd/argocd/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 namespace: argocd
 resources:
 - github.com/argoproj/argo-cd/manifests/cluster-install?ref=v2.14.11
+- ./resources/ingress.yaml
 - ./resources/routes.yaml
 - ./resources/keycloak-credentials.yaml
 # Repository Credentials
