--- a/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/kube-system/cilium/kustomization.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/kube-system/cilium/kustomization.yaml
@@ -37,6 +37,11 @@ helmCharts:
     localRedirectPolicy: true
     bgpControlPlane:
       enabled: true
+    l2announcements:
+      enabled: true
+      leaseDuration: 15s
+      leaseRenewDeadline: 5s
+      leaseRetryPeriod: 2s
     l7proxy: false
     envoy:
       enabled: false
@@ -46,5 +51,7 @@ helmCharts:
     k8sServiceHost: "172.28.2.11"
     k8sServicePort: 6443
 resources:
-- resources/lb-ip-pool.yaml
+- resources/bgp-lb-ip-pool.yaml
 - resources/bgp.yaml
+- resources/l2-lb-ip-pool.yaml
+- resources/l2-policy.yaml
