--- a/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/kube-system/cilium/kustomization.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/kube-system/cilium/kustomization.yaml
@@ -51,7 +51,7 @@ helmCharts:
     k8sServiceHost: "172.28.2.11"
     k8sServicePort: 6443
 resources:
-- resources/bgp-lb-ip-pool.yaml
-- resources/bgp.yaml
+# - resources/bgp-lb-ip-pool.yaml
+# - resources/bgp.yaml
 - resources/l2-lb-ip-pool.yaml
 - resources/l2-policy.yaml
