update envoy config with cilium fixes

--- a/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/kube-system/default-cluster-gateway/kustomization.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/kube-system/default-cluster-gateway/kustomization.yaml
@@ -2,4 +2,4 @@ resources:
 - resources/certificates.yaml
 - resources/envoy-proxy-config.yaml
 - resources/gateway.yaml
-- resources/ctp-default.yaml
+# - resources/ctp-default.yaml
