installNoConntrackIptablesRules requires native routing

--- a/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/kube-system/cilium/kustomization.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/kube-system/cilium/kustomization.yaml
@@ -41,7 +41,7 @@ helmCharts:
     # ipv4NativeRoutingCIDR: 10.244.0.0/16
     k8s:
       requireIpv4PodCIDR: true
-    installNoConntrackIptablesRules: true
+    # installNoConntrackIptablesRules: true
     localRedirectPolicy: true
     bgpControlPlane:
       enabled: false
