--- a/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/kube-system/default-cluster-gateway/resources/envoy-proxy-config.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/kube-system/default-cluster-gateway/resources/envoy-proxy-config.yaml
@@ -7,5 +7,6 @@ spec:
     type: Kubernetes
     kubernetes:
       envoyService:
+        externalTrafficPolicy: Cluster
         annotations:
           lbipam.cilium.io/ips: "172.28.3.128"
