--- a/kubernetes/by-cluster/red-squadron-talos/tk831/applications/by-namespace/tk831/gitea/service.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/tk831/applications/by-namespace/tk831/gitea/service.yaml
@@ -28,4 +28,5 @@ spec:
     port: 3539
     targetPort: 3539
   type: LoadBalancer
+  externalTrafficPolicy: Cluster
   loadBalancerIP: "172.28.3.129"
