--- a/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/kube-system/cilium/kustomization.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/kube-system/cilium/kustomization.yaml
@@ -57,7 +57,7 @@ helmCharts:
       enabled: true
       enableAlpn: true
       gatewayClass:
-        create: true
+        create: "true"
     k8sClientRateLimit:
       qps: 1200
       burst: 1800
