--- a/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/kube-system/cilium/resources/gateway.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/kube-system/cilium/resources/gateway.yaml
@@ -1,7 +1,7 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
-  name: my-gateway
+  name: cilium
 spec:
   gatewayClassName: cilium
   infrastructure:
