--- a/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/kube-system/cilium/resources/gateway.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/kube-system/cilium/resources/gateway.yaml
@@ -11,9 +11,21 @@ spec:
   - type: IPAddress
     value: 172.28.3.136
   listeners:
-  - allowedRoutes:
-      namespaces:
-        from: Same
-    name: web-gw
-    port: 80
+  - name: http
     protocol: HTTP
+    port: 80
+    allowedRoutes:
+      namespaces:
+        from: All
+  - name: https
+    protocol: HTTPS
+    port: 443
+    tls:
+      mode: Terminate
+      certificateRefs:
+      - kind: Secret
+        group: ""
+        name: default-cluster-gateway-tls-certificates
+    allowedRoutes:
+      namespaces:
+        from: All
