disable cilium envoy again

--- a/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/kube-system/cilium/kustomization.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/kube-system/cilium/kustomization.yaml
@@ -50,22 +50,18 @@ helmCharts:
       leaseDuration: 15s
       leaseRenewDeadline: 5s
       leaseRetryPeriod: 2s
-    l7proxy: true
+    l7proxy: false
     envoy:
-      enabled: true
+      enabled: false
     gatewayAPI:
-      enabled: true
-      enableAlpn: true
-      gatewayClass:
-        create: "true"
+      enabled: false
     k8sClientRateLimit:
       qps: 1200
       burst: 1800
-    k8sServiceHost: "172.28.2.11"
+    k8sServiceHost: localhost
     k8sServicePort: 6443
 resources:
 # - resources/bgp-lb-ip-pool.yaml
 # - resources/bgp.yaml
 - resources/l2-lb-ip-pool.yaml
 - resources/l2-policy.yaml
-- resources/gateway.yaml
