--- a/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/mariadb-system/mariadb-operator/kustomization.yaml
+++ b/kubernetes/by-cluster/red-squadron-talos/system/applications/by-namespace/mariadb-system/mariadb-operator/kustomization.yaml
@@ -1,9 +1,13 @@
 helmCharts:
+- releaseName: mariadb-operator-crds
+  name: mariadb-operator-crds
+  repo: https://mariadb-operator.github.io/mariadb-operator
+  version: "0.38.1"
+  includeCRDs: true
 - releaseName: mariadb-operator
   name: mariadb-operator
   repo: https://mariadb-operator.github.io/mariadb-operator
   version: "0.38.1"
-  includeCRDs: true
   valuesInline:
     extraArgs:
       metrics:
